--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -36,7 +36,6 @@
 
 - block:
     - name: download prometheus binary to local folder
-      become: false
       get_url:
         url: "https://github.com/prometheus/prometheus/releases/download/v{{ prometheus_version }}/prometheus-{{ prometheus_version }}.linux-{{ go_arch }}.tar.gz"
         dest: "/tmp/prometheus-{{ prometheus_version }}.linux-{{ go_arch }}.tar.gz"
@@ -46,22 +45,21 @@
       retries: 5
       delay: 2
       # run_once: true # <-- this cannot be set due to multi-arch support
-      delegate_to: localhost
       check_mode: false
 
     - name: unpack prometheus binaries
-      become: false
       unarchive:
+        remote_src: yes
         src: "/tmp/prometheus-{{ prometheus_version }}.linux-{{ go_arch }}.tar.gz"
         dest: "/tmp"
         creates: "/tmp/prometheus-{{ prometheus_version }}.linux-{{ go_arch }}/prometheus"
-      delegate_to: localhost
       check_mode: false
 
     - name: propagate official prometheus and promtool binaries
       copy:
         src: "/tmp/prometheus-{{ prometheus_version }}.linux-{{ go_arch }}/{{ item }}"
         dest: "{{ _prometheus_binary_install_dir }}/{{ item }}"
+        remote_src: yes
         mode: 0755
         owner: root
         group: root
@@ -75,6 +73,7 @@
       copy:
         src: "/tmp/prometheus-{{ prometheus_version }}.linux-{{ go_arch }}/{{ item }}/"
         dest: "{{ prometheus_config_dir }}/{{ item }}/"
+        remote_src: yes
         mode: 0644
         owner: root
         group: root
@@ -91,6 +90,7 @@
   copy:
     src: "{{ prometheus_binary_local_dir }}/{{ item }}"
     dest: "{{ _prometheus_binary_install_dir }}/{{ item }}"
+    remote_src: yes
     mode: 0755
     owner: root
     group: root
